--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@react-native-firebase/storage": "^15.1.1",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-navigation/stack": "^6.2.2",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-gesture-handler": "^2.5.0",
     "react-native-gifted-chat": "^1.0.2",
     "react-native-image-picker": "^4.8.4",
     "react-native-safe-area-context": "^4.3.1",
